# covault

./: CMakeLists.txt  LICENSE  README.md  redis_setup.sh  setup.sh
bench/: README.md  generate_mapper_reducer_bench.py  generate_node_bench.py  generate_primitives_bench.py  generate_reducer_eq_bench.py  ingress_a.json  ingress_a1.json  ingress_b.json  ingress_b1.json  mapper_a1.json  mapper_b1.json  network_test_a.json  network_test_b.json  primitives_a1.json  primitives_a2.json  primitives_b1.json  primitives_b2.json  reducer_a1.json  reducer_b1.json  reducer_eq_a.json  reducer_eq_b.json  top_a1.json  top_a2.json  top_b1.json  top_b2.json
bench/verify/: .gitignore  key_rand_alice.txt  key_rand_bob.txt  tile_alice.txt  tile_bob.txt
circuits/: README.md  eq256.txt
cmake/: compiler-warnings.cmake  project-settings.cmake  sanitizers.cmake  static-analyzers.cmake
include/: bloomfilter.h  contact_path_query.hpp  counter.h  dualex_reveal.hpp  encounter.hpp  flow_path_query.hpp  ingress.hpp  io.hpp  map_reducer.hpp  mapper.hpp  mapper_macs.hpp  primitives.hpp  redis.h  reducer.hpp  secrets.hpp  shared_memory.hpp  single_execution.h  store_path_encounter.hpp  types.h
include/dualex/: ag2pc_wrapper.h  dualex.h  eq.h  gen_circuit.h  hash.h  labels.h
include/macs/: hmac.hpp  kmac.hpp  utils.h  verify.h
include/utils/: b_io.hpp  ipaddr.hpp  parser.hpp  stats.hpp
run/: README.md  ag2pc_sort_run.sh  bench_run.sh  big_shuffle_run.sh  contact_path_query_run.sh  cross_microbm_run.sh  dualex_eq_check_run.sh  mapper_reducer_run.sh  node_query_run.sh  primitives_run.sh  reducer_equality_check_run.sh  run_network_test.sh
sbin/: README.md  format.sh  iftop_parsed.sh  launch-qemu.sh  pyformat.sh  set_cpugov.sh  setup_amd_machines.sh  setup_debianvm_network.sh  setup_intel_machines.sh  setup_mellanoxhost_network.sh  setup_snphost_network.sh  setup_snpvm_network.sh  setup_ubuntuvm_network.sh
src/: L1reducer.cpp  L2reducer.cpp  eq.cpp  ingress.cpp  ingress_gv.cpp  ingress_mv.cpp  mapper.cpp  mapper_gv.cpp  primitives.cpp  reducer_eq.cpp
test/: ag2pc_benchmark.cpp  big_shuffle_test.cpp  contact_path_query_test.cpp  cross_microbm.cpp  dp_noise.cpp  dualex_eq_test.cpp  dualex_reveal_test.cpp  encounter_test.cpp  flow_path_query_test.cpp  garble_redis_test.cpp  generate_circuits.cpp  hexbin_test.cpp  ingress_btest.cpp  ingress_mac_test.cpp  ingress_tile_test.cpp  intersect_query_test.cpp  kmac.cpp  macs_test.cpp  microbm.cpp  multGF2_test.cpp  network_test.cpp  network_test_2.cpp  node_q1.cpp  node_q2.cpp  secret_test.cpp  sortEncounters.cpp  sort_test.cpp  store_path_encounter_test.cpp  swappable_ram_test.cpp  top_1.cpp  verify_nmal_test.cpp  verify_test.cpp
utils/: extrapolate.py
utils/parsers/: ag2pc_parser.py  compute_query_unit_results.py  prepare_cost_breakdown_results.sh  prepare_query_units_results.sh  sh2pc_parser.py
utils/plots/: generate_plots.py  plot_breakdown.py  plot_mappers_reducers.py  plot_primitives.py  plot_queries.py
